--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@minpress/docs",
+  "name": "@minipress/docs",
   "version": "0.1.0",
   "description": "",
   "main": "src/index.js",
@@ -7,14 +7,14 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minpress dev",
-    "dev": "minpress dev",
-    "serve": "minpress serve",
-    "gen": "minpress generate",
-    "gen:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minpress generate"
+    "dev:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minipress dev",
+    "dev": "minipress dev",
+    "serve": "minipress serve",
+    "gen": "minipress generate",
+    "gen:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minipress generate"
   },
   "dependencies": {
-    "@minpress/minpress2": "^0.1.0",
-    "@minpress/minpress-theme-docs": "^0.1.0"
+    "@minipress/minipress2": "^0.1.0",
+    "@minipress/minipress-theme-docs": "^0.1.0"
   }
 }
