--- a/_themes/default/package.json
+++ b/_themes/default/package.json
@@ -1,31 +1,35 @@
 {
-	"name": "@minipress/minipress-theme-default",
-	"version": "0.1.0",
-	"private": false,
-	"main": "index.js",
-	"peerDependencies": {
-		"core-js": "^2.6.5",
-		"vue": "^2.6.10",
-		"vue-router": "^3.1.3"
-	},
-	"files": [
-		"index.js",
-		"src/*"
-	],
-	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.11.0",
-		"@vue/cli-plugin-eslint": "^3.11.0",
-		"@vue/cli-plugin-unit-jest": "^3.11.0",
-		"@vue/cli-service": "^3.11.0",
-		"@vue/test-utils": "1.0.0-beta.29",
-		"babel-core": "7.0.0-bridge.0",
-		"babel-eslint": "^10.0.1",
-		"babel-jest": "^23.6.0",
-		"core-js": "^2.6.5",
-		"eslint": "^5.16.0",
-		"eslint-plugin-vue": "^5.0.0",
-		"vue": "^2.6.10",
-		"vue-router": "^3.1.3",
-		"vue-template-compiler": "^2.6.10"
-	}
+  "name": "@minipress/minipress-theme-default",
+  "version": "0.1.0",
+  "private": false,
+  "scripts": {
+    "serve": "vue-cli-service serve demo",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit"
+  },
+  "main": "index.js",
+  "peerDependencies": {
+    "core-js": "^2.6.5",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
+  },
+  "files": ["index.js", "src/*"],
+  "devDependencies": {
+    "@minipress/eslint-config-client": "^0.1.0",
+    "vue-router": "^3.1.3",
+    "core-js": "^2.6.5",
+    "vue": "^2.6.10",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-unit-jest": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.6.10"
+  }
 }
