--- a/_examples/features/package.json
+++ b/_examples/features/package.json
@@ -14,6 +14,6 @@
     "@minipress/minipress-theme-docs": "^0.1.0",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
-    "@minipress/minipress2": "^0.1.0"
+    "@minipress/minipress": "^0.1.0"
   }
 }
