--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -1,5 +1,5 @@
 {
-  "publicPath": "/minpress/",
+  "publicPath": "/minipress/",
   "all": [
     "1.style.css",
     "assets/js/1.js",
@@ -25,27 +25,19 @@
     "assets/js/6.js"
   ],
   "modules": {
-    "15946663": [
+    "387ccf72": [
       8,
       7
     ],
-    "87947450": [
+    "95a9d01c": [
       8,
       7
     ],
-    "2f0911de": [
+    "030ce01d": [
       8,
       7
     ],
-    "dc27450a": [
-      8,
-      7
-    ],
-    "02278426": [
-      8,
-      7
-    ],
-    "8d713954": [
+    "427a739c": [
       8,
       7
     ],
@@ -57,102 +49,110 @@
       8,
       7
     ],
-    "e46f586a": [
+    "68a06702": [
       8,
       7
     ],
-    "587e9592": [
+    "5963f189": [
       8,
       7
     ],
-    "ea60ccc2": [
+    "02025afe": [
       8,
       7
     ],
-    "18331aae": [
+    "76d094f0": [
       8,
       7
     ],
-    "46cacd7d": [
+    "1581d0f8": [
       8,
       7
     ],
-    "65922f92": [
+    "898b6018": [
+      8,
+      7
+    ],
+    "5ea60f50": [
       0,
       1
     ],
-    "d5c02036": [
+    "1f9d3886": [
       0,
       1
     ],
-    "0277cb59": [
+    "2ef744d0": [
       0,
       1
     ],
-    "0606cd34": [
+    "097cdd55": [
       0,
       1
     ],
-    "a788fec8": [
+    "36b8c93d": [
       0,
       1
     ],
-    "b788c2e2": [
+    "c37bb010": [
       0,
       1
     ],
-    "2aed923d": [
+    "117b3826": [
       0,
       1
     ],
-    "5a05f3fe": [
+    "3c50c9f8": [
       0,
       1
     ],
-    "45e8f8e8": [
+    "51dbe616": [
       0,
       1
     ],
-    "420922f4": [
+    "2896c8dd": [
       0,
       1
     ],
-    "a466db28": [
+    "378baf95": [
       0,
       1
     ],
-    "4dd78b76": [
+    "64704c2d": [
       6
     ],
-    "07c55338": [
+    "1b254512": [
       3
     ],
-    "6f7cf735": [
+    "8746b116": [
       4
     ],
-    "2158ab42": [
+    "141f87d8": [
       5
     ],
-    "46da1d4f": [
+    "c679ae3a": [
       2
     ],
-    "8be8952e": [
+    "46ad0374": [
+      8,
+      7
+    ],
+    "bf42975a": [
       0,
       1
     ],
-    "ee270028": [
+    "e8ef4c7c": [
       0,
       1
     ],
-    "ba1fb69c": [
+    "ed79b8c8": [
       0,
       1
     ],
-    "5b15ee84": [
+    "5ec92f24": [
       0,
       1
     ],
-    "d83458fe": [
+    "096b4d6b": [
       0,
       1
     ]
