--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -8,6 +8,7 @@
     "assets/js/4.js",
     "assets/js/5.js",
     "assets/js/6.js",
+    "assets/js/7.js",
     "assets/js/app.js",
     "style.css"
   ],
@@ -22,56 +23,57 @@
     "assets/js/3.js",
     "assets/js/4.js",
     "assets/js/5.js",
-    "assets/js/6.js"
+    "assets/js/6.js",
+    "assets/js/7.js"
   ],
   "modules": {
     "387ccf72": [
-      8,
-      7
+      9,
+      8
     ],
     "95a9d01c": [
-      8,
-      7
+      9,
+      8
     ],
     "030ce01d": [
-      8,
-      7
+      9,
+      8
     ],
     "427a739c": [
-      8,
-      7
+      9,
+      8
     ],
     "1260bfba": [
-      8,
-      7
+      9,
+      8
     ],
     "bba014b0": [
-      8,
-      7
+      9,
+      8
     ],
     "68a06702": [
-      8,
-      7
+      9,
+      8
     ],
     "5963f189": [
-      8,
-      7
+      9,
+      8
     ],
     "02025afe": [
-      8,
-      7
+      9,
+      8
     ],
     "76d094f0": [
-      8,
-      7
+      9,
+      8
     ],
     "1581d0f8": [
-      8,
-      7
+      9,
+      8
     ],
     "898b6018": [
-      8,
-      7
+      9,
+      8
     ],
     "5ea60f50": [
       0,
@@ -118,13 +120,16 @@
       1
     ],
     "64704c2d": [
-      6
+      7
     ],
-    "5970166b": [
+    "0e8d2f3c": [
       4
     ],
-    "d08a1c26": [
+    "5970166b": [
       5
+    ],
+    "d08a1c26": [
+      6
     ],
     "35e95013": [
       3
@@ -133,8 +138,8 @@
       2
     ],
     "46ad0374": [
-      8,
-      7
+      9,
+      8
     ],
     "bf42975a": [
       0,
