--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -2,15 +2,25 @@
   "publicPath": "/minipress/",
   "all": [
     "1.style.css",
+    "1.style.css.map",
     "assets/js/1.js",
+    "assets/js/1.js.map",
     "assets/js/2.js",
+    "assets/js/2.js.map",
     "assets/js/3.js",
+    "assets/js/3.js.map",
     "assets/js/4.js",
+    "assets/js/4.js.map",
     "assets/js/5.js",
+    "assets/js/5.js.map",
     "assets/js/6.js",
+    "assets/js/6.js.map",
     "assets/js/7.js",
+    "assets/js/7.js.map",
     "assets/js/app.js",
-    "style.css"
+    "assets/js/app.js.map",
+    "style.css",
+    "style.css.map"
   ],
   "initial": [
     "style.css",
@@ -28,138 +38,202 @@
   ],
   "modules": {
     "387ccf72": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "95a9d01c": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "030ce01d": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "427a739c": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "1260bfba": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "bba014b0": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "68a06702": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "5963f189": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "02025afe": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "76d094f0": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "1581d0f8": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "898b6018": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "5ea60f50": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "1f9d3886": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "30d631c2": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "097cdd55": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "36b8c93d": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "c37bb010": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "117b3826": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "3b61537f": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "51dbe616": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "2896c8dd": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "378baf95": [
       0,
-      1
-    ],
-    "64704c2d": [
-      7
-    ],
-    "0e8d2f3c": [
-      4
-    ],
-    "5970166b": [
-      5
-    ],
-    "d08a1c26": [
-      6
-    ],
-    "35e95013": [
+      2,
+      1,
       3
     ],
+    "64704c2d": [
+      14,
+      15
+    ],
+    "0e8d2f3c": [
+      8,
+      9
+    ],
+    "5970166b": [
+      10,
+      11
+    ],
+    "d08a1c26": [
+      12,
+      13
+    ],
+    "35e95013": [
+      6,
+      7
+    ],
     "359fd0ab": [
-      2
+      4,
+      5
     ],
     "46ad0374": [
-      9,
-      8
+      18,
+      16,
+      19,
+      17
     ],
     "bf42975a": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "eace396e": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "ed79b8c8": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "5ec92f24": [
       0,
-      1
+      2,
+      1,
+      3
     ],
     "096b4d6b": [
       0,
-      1
+      2,
+      1,
+      3
     ]
   }
 }
