--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -77,6 +77,7 @@
     "jest": "^24.9.0",
     "@types/jest": "^24.0.18",
     "@types/webpack": "^4.39.0",
-    "@minipress/eslint-config-node": "^0.1.0"
+    "@minipress/eslint-config-node": "^0.1.0",
+    "eslint-plugin-jest": "^22.17.0"
   }
 }
