--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -11,6 +11,8 @@
     "minipress": "./src/cli/cli-entry.js"
   },
   "dependencies": {
+    "file-loader": "^4.2.0",
+    "url-loader": "^2.1.0",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "@babel/core": "^7.5.5",
