--- a/_examples/hello-world/package.json
+++ b/_examples/hello-world/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minipress dev --port 8080 --config .minipress/config.js",
-    "dev": "minipress dev --port 8080 --config .minipress/config.js",
-    "serve": "minipress serve",
+    "dev:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minipress dev --port 4002 --config .minipress/config.js",
+    "dev": "minipress dev --port 4002 --config .minipress/config.js",
+    "serve": "minipress serve --port 4002",
     "gen": "minipress generate --config .minipress/config.js",
     "gen:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minipress generate --config .minipress/config.js"
   },
