--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -72,6 +72,7 @@
     "webpack": "^4.39.2"
   },
   "devDependencies": {
+    "typescript": "^3.6.3",
     "@types/node": "^12.7.2",
     "@types/express": "^4.17.1",
     "@types/serve-static": "^1.13.3",
