--- a/_packages/minipress/tsconfig.json
+++ b/_packages/minipress/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "commonjs",
-    "noEmit": true,
-    "lib": ["es2017"],
     "allowJs": true,
     "checkJs": true,
-    "strictNullChecks": true,
-    "esModuleInterop": true
-  }
+    "noEmit": true,
+    "target": "esnext",
+    "module": "commonjs",
+    "resolveJsonModule": true,
+    "strict": false,
+    "moduleResolution": "node"
+  },
+  "include": ["**/*.js"]
 }
