--- a/_themes/docs/package.json
+++ b/_themes/docs/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint --no-fix",
     "test:unit": "vue-cli-service test:unit"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "index.js",
   "peerDependencies": {
     "core-js": "^2.6.5",
