--- a/docs/package.json
+++ b/docs/package.json
@@ -3,15 +3,26 @@
   "version": "0.1.0",
   "description": "",
   "main": "src/index.js",
+  "homepage": "https://christiankienle.github.io/minipress/",
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "files": [
+    "components/*",
+    "pages/*",
+    ".minipress/config.js",
+    ".minipress/layouts/*",
+    "!.DS_Store"
+  ],
   "scripts": {
     "dev:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minipress dev",
     "dev": "minipress dev",
     "serve": "minipress serve",
     "gen": "minipress generate",
     "gen:debug": "node --inspect-brk --no-lazy ./node_modules/.bin/minipress generate"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "dependencies": {
     "@minipress/minipress": "^0.1.0",
