--- a/_packages/app/package.json
+++ b/_packages/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@minipress/app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve demo",
     "build": "vue-cli-service build",
