--- a/_examples/hello-world/package.json
+++ b/_examples/hello-world/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hello-world",
-  "version": "1.0.0",
+  "version": "0.1.1-alpha.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -20,6 +20,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@minipress/minipress": "^0.1.0"
+    "@minipress/minipress": "^0.1.1-alpha.0"
   }
 }
