--- a/_packages/app/package.json
+++ b/_packages/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/app",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve demo",
@@ -19,23 +19,18 @@
     "!**/__*__/**"
   ],
   "dependencies": {
-    "prismjs": "^1.17.1",
-    "@minipress/built-in-components": "^0.1.0"
+    "@minipress/built-in-components": "^0.1.1-alpha.0",
+    "prismjs": "^1.17.1"
   },
   "peerDependencies": {
-    "vue-router-prefetch": "^1.6.0",
-    "vuex": "^3.1.1",
-    "vue-router": "^3.1.3",
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10"
-  },
-  "devDependencies": {
-    "@minipress/eslint-config-client": "^0.1.0",
-    "vue-router-prefetch": "^1.6.0",
-    "vuex": "^3.1.1",
-    "vue-router": "^3.1.3",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue-router-prefetch": "^1.6.0",
+    "vuex": "^3.1.1"
+  },
+  "devDependencies": {
+    "@minipress/eslint-config-client": "^0.1.1-alpha.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-plugin-unit-jest": "^3.11.0",
@@ -44,8 +39,13 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "core-js": "^2.6.5",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue-router-prefetch": "^1.6.0",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1"
   }
 }
