--- a/_packages/built-in-components/package.json
+++ b/_packages/built-in-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/built-in-components",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve demo",
@@ -19,19 +19,15 @@
     "!**/__*__/**"
   ],
   "peerDependencies": {
-    "vuex": "^3.1.1",
+    "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vue": "^2.6.10"
+    "vuex": "^3.1.1"
   },
   "dependencies": {
     "vue-router-prefetch": "^1.6.0"
   },
   "devDependencies": {
-    "@minipress/eslint-config-client": "^0.1.0",
-    "vuex": "^3.1.1",
-    "vue-router": "^3.1.3",
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10",
+    "@minipress/eslint-config-client": "^0.1.1-alpha.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-plugin-unit-jest": "^3.11.0",
@@ -40,8 +36,12 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "core-js": "^2.6.5",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1"
   }
 }
