--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/minipress",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
@@ -14,18 +14,14 @@
     "minipress": "./src/cli/cli-entry.js"
   },
   "dependencies": {
-    "file-loader": "^4.2.0",
-    "url-loader": "^2.1.0",
-    "express": "^4.17.1",
-    "serve-static": "^1.14.1",
     "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "@minipress/app": "^0.1.0",
-    "@minipress/minipress-theme-default": "^0.1.0",
-    "@minipress/log": "^0.1.0",
+    "@minipress/app": "^0.1.1-alpha.0",
+    "@minipress/log": "^0.1.1-alpha.0",
+    "@minipress/minipress-theme-default": "^0.1.1-alpha.0",
     "@types/fs-extra": "^8.0.0",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
@@ -34,6 +30,8 @@
     "critical": "^1.3.6",
     "css-loader": "^3.2.0",
     "escape-html": "^1.0.3",
+    "express": "^4.17.1",
+    "file-loader": "^4.2.0",
     "fs-extra": "^8.1.0",
     "globby": "^10.0.1",
     "gray-matter": "^4.0.2",
@@ -52,38 +50,40 @@
     "querystring": "^0.2.0",
     "saber-markdown": "^0.1.1",
     "sass-loader": "^8.0.0",
+    "serve-static": "^1.14.1",
     "slugo": "^0.2.3",
-    "stylus-loader": "^3.0.2",
     "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "tailwindcss": "^1.1.2",
     "tapable": "^1.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^2.1.0",
+    "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.3",
     "vue-loader": "^15.7.1",
-    "vue-router-prefetch": "^1.6.0",
     "vue-router": "^3.1.2",
+    "vue-router-prefetch": "^1.6.0",
     "vue-server-renderer": "^2.6.10",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
-    "vue": "^2.6.10",
     "vuex": "^3.1.1",
+    "webpack": "^4.39.2",
     "webpack-chain": "^6.0.0",
     "webpack-dev-middleware": "^3.7.1",
     "webpack-dev-server": "^3.8.0",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^1.7.2",
-    "webpack": "^4.39.2"
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "typescript": "^3.6.3",
-    "@types/node": "^12.7.2",
+    "@minipress/eslint-config-node": "^0.1.1-alpha.0",
     "@types/express": "^4.17.1",
-    "@types/serve-static": "^1.13.3",
-    "eslint": "^6.2.1",
-    "jest": "^24.9.0",
     "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.2",
+    "@types/serve-static": "^1.13.3",
     "@types/webpack": "^4.39.0",
-    "@minipress/eslint-config-node": "^0.1.0",
-    "eslint-plugin-jest": "^22.17.0"
+    "eslint": "^6.2.1",
+    "eslint-plugin-jest": "^22.17.0",
+    "jest": "^24.9.0",
+    "typescript": "^3.6.3"
   }
 }
