--- a/_support/eslint-config-node/package.json
+++ b/_support/eslint-config-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/eslint-config-node",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
