--- a/_support/gh-pages/package.json
+++ b/_support/gh-pages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/gh-pages",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ora": "^3.4.0",
+    "execa": "^2.0.4",
     "gh-pages": "^2.1.1",
-    "execa": "^2.0.4"
+    "ora": "^3.4.0"
   }
 }
