--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/docs",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "description": "",
   "main": "src/index.js",
   "homepage": "https://christiankienle.github.io/minipress/",
@@ -25,7 +25,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@minipress/minipress": "^0.1.0",
-    "@minipress/minipress-theme-docs": "^0.1.0"
+    "@minipress/minipress": "^0.1.1-alpha.0",
+    "@minipress/minipress-theme-docs": "^0.1.1-alpha.0"
   }
 }
