--- a/_support/eslint-config-client/package.json
+++ b/_support/eslint-config-client/package.json
@@ -6,7 +6,9 @@
   "resolutions": {
     "portfinder": "1.0.21"
   },
+  "private": false,
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "9d425bc39a5be2e627c4377e5a76b5e4d4850dd8"
 }
