--- a/_examples/hello-world/package.json
+++ b/_examples/hello-world/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "hello-world",
+  "name": "@minipress/example-hello-world",
   "version": "0.1.1-alpha.0",
+  "private": false,
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -21,5 +22,6 @@
   },
   "dependencies": {
     "@minipress/minipress": "^0.1.1-alpha.0"
-  }
+  },
+  "gitHead": "9d425bc39a5be2e627c4377e5a76b5e4d4850dd8"
 }
