--- a/_packages/app/package.json
+++ b/_packages/app/package.json
@@ -47,5 +47,6 @@
     "vue-router-prefetch": "^1.6.0",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1"
-  }
+  },
+  "gitHead": "9d425bc39a5be2e627c4377e5a76b5e4d4850dd8"
 }
