--- a/_packages/built-in-components/package.json
+++ b/_packages/built-in-components/package.json
@@ -43,5 +43,6 @@
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1"
-  }
+  },
+  "gitHead": "9d425bc39a5be2e627c4377e5a76b5e4d4850dd8"
 }
