--- a/_packages/minipress/package.json
+++ b/_packages/minipress/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1-alpha.0",
   "main": "src/index.js",
   "license": "MIT",
+  "private": false,
   "scripts": {
     "lint": "eslint .",
     "test": "jest ."
@@ -85,5 +86,6 @@
     "eslint-plugin-jest": "^22.17.0",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
-  }
+  },
+  "gitHead": "9d425bc39a5be2e627c4377e5a76b5e4d4850dd8"
 }
