--- a/_support/gh-pages/package.json
+++ b/_support/gh-pages/package.json
@@ -13,5 +13,6 @@
     "execa": "^2.0.4",
     "gh-pages": "^2.1.1",
     "ora": "^3.4.0"
-  }
+  },
+  "gitHead": "9d425bc39a5be2e627c4377e5a76b5e4d4850dd8"
 }
