--- a/_themes/default/package.json
+++ b/_themes/default/package.json
@@ -37,5 +37,6 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "gitHead": "9d425bc39a5be2e627c4377e5a76b5e4d4850dd8"
 }
