--- a/docs/package.json
+++ b/docs/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://christiankienle.github.io/minipress/",
   "keywords": [],
   "author": "",
+  "private": false,
   "license": "ISC",
   "files": [
     "components/*",
@@ -27,5 +28,6 @@
   "dependencies": {
     "@minipress/minipress": "^0.1.1-alpha.0",
     "@minipress/minipress-theme-docs": "^0.1.1-alpha.0"
-  }
+  },
+  "gitHead": "9d425bc39a5be2e627c4377e5a76b5e4d4850dd8"
 }
