--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@minipress/main",
-  "version": "1.0.0",
+  "version": "0.1.1-alpha.4",
   "main": "index.js",
   "license": "MIT",
   "private": false,
