--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1-alpha.4",
   "main": "index.js",
   "license": "MIT",
-  "private": false,
+  "private": true,
   "publishConfig": {
     "access": "public"
   },
