--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "@minipress/main",
+  "name": "main",
   "version": "0.1.1-alpha.4",
   "main": "index.js",
   "license": "MIT",
-  "private": false,
-  "publishConfig": {
-    "access": "public"
-  },
+  "private": true,
   "homepage": "https://christiankienle.github.io/minipress/",
   "scripts": {
-    "publish:npm": "lerna publish prerelease",
+    "publish": "lerna publish prerelease",
     "gh-pages": "node _support/gh-pages",
     "bs": "lerna bootstrap",
     "clean": "lerna clean -y",
