--- a/_support/gh-pages/package.json
+++ b/_support/gh-pages/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -14,5 +18,5 @@
     "gh-pages": "^2.1.1",
     "ora": "^3.4.0"
   },
-  "gitHead": "90d65a7cce1a3bc70f50af4144451bd74dfae174"
+  "gitHead": "c7520f1b3a55e5c1d23584224b602564223aaac8"
 }
