--- a/vue-ssr-client-manifest.json
+++ b/vue-ssr-client-manifest.json
@@ -7,6 +7,7 @@
     "assets/js/4.js",
     "assets/js/5.js",
     "assets/js/6.js",
+    "assets/js/7.js",
     "assets/js/app.js",
     "style.css"
   ],
@@ -20,158 +21,162 @@
     "assets/js/3.js",
     "assets/js/4.js",
     "assets/js/5.js",
-    "assets/js/6.js"
+    "assets/js/6.js",
+    "assets/js/7.js"
   ],
   "modules": {
-    "71116467": [
-      7,
-      6
+    "51407698": [
+      5
     ],
     "95a9d01c": [
-      7,
-      6
+      8,
+      7
     ],
     "387ccf72": [
-      7,
-      6
+      8,
+      7
     ],
     "030ce01d": [
-      7,
-      6
+      8,
+      7
     ],
     "5ea60f50": [
-      7,
-      6
+      8,
+      7
     ],
     "1f9d3886": [
-      7,
-      6
+      8,
+      7
     ],
     "c0e296a0": [
-      7,
-      6
+      8,
+      7
     ],
     "097cdd55": [
-      7,
-      6
+      8,
+      7
     ],
     "e1818704": [
-      7,
-      6
+      8,
+      7
     ],
-    "7f3364c7": [
-      7,
-      6
+    "bff928d0": [
+      8,
+      7
     ],
     "2cfacde4": [
-      7,
-      6
+      8,
+      7
     ],
     "13e29655": [
-      7,
-      6
+      8,
+      7
     ],
     "49c05ad8": [
-      7,
-      6
-    ],
-    "7db4e658": [
-      7,
-      6
-    ],
-    "01cae47a": [
-      7,
-      6
+      8,
+      7
     ],
     "5547e37c": [
-      7,
-      6
+      8,
+      7
+    ],
+    "01cae47a": [
+      8,
+      7
+    ],
+    "7db4e658": [
+      8,
+      7
     ],
     "427a739c": [
-      7,
-      6
+      8,
+      7
     ],
     "1260bfba": [
-      7,
-      6
+      8,
+      7
     ],
     "bba014b0": [
-      7,
-      6
+      8,
+      7
     ],
     "68a06702": [
-      7,
-      6
+      8,
+      7
     ],
     "5963f189": [
-      7,
-      6
+      8,
+      7
     ],
     "02025afe": [
-      7,
-      6
+      8,
+      7
     ],
     "76d094f0": [
-      7,
-      6
+      8,
+      7
     ],
     "c37bb010": [
-      7,
-      6
+      8,
+      7
     ],
     "117b3826": [
-      7,
-      6
+      8,
+      7
     ],
     "1949bde0": [
-      7,
-      6
+      8,
+      7
     ],
     "51dbe616": [
-      7,
-      6
+      8,
+      7
     ],
     "abb0e7c4": [
-      7,
-      6
+      8,
+      7
+    ],
+    "3a37cb38": [
+      8,
+      7
     ],
     "10ebfa44": [
-      7,
-      6
+      8,
+      7
     ],
     "64e11a96": [
-      7,
-      6
+      8,
+      7
     ],
     "66045b98": [
-      7,
-      6
-    ],
-    "99f8e718": [
-      7,
-      6
-    ],
-    "3248ae4c": [
-      7,
-      6
+      8,
+      7
     ],
     "648942a2": [
-      7,
-      6
+      8,
+      7
+    ],
+    "3248ae4c": [
+      8,
+      7
+    ],
+    "99f8e718": [
+      8,
+      7
     ],
     "1581d0f8": [
-      7,
-      6
+      8,
+      7
     ],
     "898b6018": [
-      7,
-      6
+      8,
+      7
     ],
     "ce6f7c70": [
       3
     ],
     "74b9b3f0": [
-      5
+      6
     ],
     "366e84c9": [
       4
@@ -186,56 +191,56 @@
       0
     ],
     "46ad0374": [
-      7,
-      6
-    ],
-    "00ab11b8": [
-      7,
-      6
-    ],
-    "2acb77ea": [
-      7,
-      6
-    ],
-    "1972f1ec": [
-      7,
-      6
-    ],
-    "44c5bdaa": [
-      7,
-      6
-    ],
-    "b9f76ad8": [
-      7,
-      6
-    ],
-    "ed79b8c8": [
-      7,
-      6
-    ],
-    "2e4d6046": [
-      7,
-      6
-    ],
-    "4292b0da": [
-      7,
-      6
-    ],
-    "664ba37f": [
-      7,
-      6
+      8,
+      7
     ],
     "31405e0e": [
-      7,
-      6
+      8,
+      7
+    ],
+    "00ab11b8": [
+      8,
+      7
+    ],
+    "2acb77ea": [
+      8,
+      7
+    ],
+    "b9f76ad8": [
+      8,
+      7
+    ],
+    "ed79b8c8": [
+      8,
+      7
+    ],
+    "44c5bdaa": [
+      8,
+      7
     ],
     "5ec92f24": [
-      7,
-      6
+      8,
+      7
+    ],
+    "4292b0da": [
+      8,
+      7
+    ],
+    "664ba37f": [
+      8,
+      7
+    ],
+    "246fe0ae": [
+      8,
+      7
     ],
     "096b4d6b": [
-      7,
-      6
+      8,
+      7
+    ],
+    "1972f1ec": [
+      8,
+      7
     ]
   }
 }
